# GrantScout

./: .env.example  .gitignore  LICENSE  PHASE1_HANDOFF.md  README.md  agents-cli-manifest.yaml  grantscout.spec.yaml  pyproject.toml  run_local.py  run_web.py
.claude/: launch.json
grantscout/: __init__.py  agent.py  config.py  eligibility.py  env.py  llm.py  matching.py  models.py  security.py  ui.py
grantscout/nodes/: __init__.py  drafter.py  matcher.py  researcher.py  review_gate.py
mcp_server/: __init__.py  catalog.json  catalog_search.py  discovery.py  server.py
submission/: GrantScout_Kaggle_Submission.docx  SUBMISSION_CHECKLIST.md  VIDEO_SCRIPT.md  WRITEUP.md
tests/: conftest.py  test_catalog.py  test_discovery.py  test_docx_export.py  test_eligibility.py  test_matching.py  test_review_gate.py  test_security.py
web/: __init__.py  docx_export.py  server.py
web/static/: app.js  index.html  styles.css
